[gd_scene load_steps=20 format=3 uid="uid://cawuunbmj2p1v"]

[ext_resource type="Script" path="res://final/level parts/mob.gd" id="1_a0nd1"]
[ext_resource type="ArrayMesh" uid="uid://bpqbf3sduxcal" path="res://final/assets/3D/Enemies/Medium.obj" id="2_kp607"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yn2nw"]
radius = 1.0
height = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ago2q"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ia5mx"]
transparency = 1
albedo_color = Color(0.968627, 0.0823529, 0.0156863, 0.854902)
emission_enabled = true
emission = Color(0.878431, 0.129412, 0.0156863, 1)
emission_energy_multiplier = 4.6
emission_operator = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5ictk"]
transparency = 1
albedo_color = Color(0.529412, 1, 1, 0.807843)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f8moc"]
transparency = 1
albedo_color = Color(0.698039, 0.364706, 0.2, 0.431373)

[sub_resource type="CylinderMesh" id="CylinderMesh_4cync"]
material = SubResource("StandardMaterial3D_f8moc")
top_radius = 0.25
bottom_radius = 7.0
height = 15.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_67r8j"]
points = PackedVector3Array(5.64611, -6.70442, 3.48408, -6.74263, -7.21754, -1.32868, -6.7234, -7.19702, 1.37246, -0.412486, 6.99168, 0.241957, 1.66324, -7.5, -6.77206, -1.09911, -7.18947, 6.76394, 6.5788, -7.23275, -2.01027, -3.98212, -7.12352, -5.54057, 1.42923, -7.5, 6.81967, 0.457602, 6.95157, -0.193087, -4.21364, -7.13911, 5.37762, 4.2721, -7.15598, -5.3437, 6.81209, -7.23941, 0.927495, -1.32868, -7.21753, -6.74263, -0.400363, 6.79741, -0.400363, 3.58003, -7.11175, 5.80202, 0.239481, 6.9123, 0.455152, -5.38547, -7.21307, -4.25886, -5.8212, -7.19538, 3.62115, 5.84144, -7.16027, -3.55668, 0.241235, 6.09678, -0.847171, -2.67336, -7.19315, 6.3172, 6.54964, -7.20058, 2.04884, -6.00686, -6.46241, -2.56131, 4.47611, -6.3605, 4.68782, 2.59451, -6.42637, -5.97323, 6.53402, -6.50919, -0.409525, -2.56051, -6.46041, -6.00626, -0.19253, 6.49936, 0.672829, 0.240616, -5.42781, -6.0557, 0.455152, 6.91231, 0.239481, 0.456863, -6.50497, 6.5298)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gadfh"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.67451)

[sub_resource type="BoxMesh" id="BoxMesh_rw3nj"]
material = SubResource("StandardMaterial3D_gadfh")
size = Vector3(2, 2, 3)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4m3lw"]
points = PackedVector3Array(-1, -1, -1.48808, 1, 1, 1.48808, 1, -1, 1.48808, 1, 1, -1.48808, -1, 1, 1.48808, -1, -1, 1.48808, 1, -1, -1.48808, -1, 1, -1.48808)

[sub_resource type="Animation" id="Animation_aaxd5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dmgCounter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("model:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("model/attackSpace/MeshInstance3D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("model/attackSpace:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("model/Medium:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("model/Medium:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.25, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("model/Medium:position:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("model/Medium:rotation:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("model/Medium:rotation:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2.35619, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("model/Medium:rotation:z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_e6ftk"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("model/attackSpace/MeshInstance3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("model/attackSpace:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_kompd"]
resource_name = "damaged"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dmgCounter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_ty2i4"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dmgCounter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("model/attackSpace/MeshInstance3D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("model/attackSpace:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qd873"]
resource_name = "search"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("model:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3.1, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.12656, 0), Vector3(0, -1.13509, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4cxhj"]
resource_name = "moving"
length = 3.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("model/Medium:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.9, 1.4, 1.9, 2.3, 2.7, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("model/Medium:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.25, -0.25, 0, 0.25, 0, 0.579628, -0.25, 0, 0.25, 0, -0.125532, -0.25, 0, 0.25, 0, 0.677007, -0.25, 0, 0.25, 0, 0.920927, -0.25, 0, 0.25, 0, 0.920927, -0.25, 0, 0.25, 0, 0.299854, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.9, 1.4, 1.9, 2.3, 2.7, 3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("model/Medium:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.9, 1.4, 1.9, 2.3, 2.7, 3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("model/Medium:rotation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.3, -0.25, 0, 0.25, 0, -0.19069, -0.25, 0, 0.25, 0, 0.112167, -0.25, 0, 0.25, 0, -0.106991, -0.25, 0, 0.25, 0, 0.161732, -0.25, 0, 0.25, 0, -0.19069, -0.25, 0, 0.25, 0, 0.112167, -0.25, 0, 0.25, 0, 0.3, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.7, 1.1, 1.6, 1.9, 2.2, 2.5, 2.8, 3)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("model/Medium:rotation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(2.35619, -0.25, 0, 0.25, 0, 2.35619, -0.25, 0, 0.25, 0, 2.33756, -0.25, 0, 0.25, 0, 2.34985, -0.25, 0, 0.25, 0, 2.3597, -0.25, 0, 0.25, 0, 2.36721, -0.25, 0, 0.25, 0, 2.33756, -0.25, 0, 0.25, 0, 2.34985, -0.25, 0, 0.25, 0, 2.46086, -0.25, 0, 0.25, 0, 2.35619, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 1, 1.6, 1.9, 2.3, 2.6, 2.8, 3)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("model/Medium:rotation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.194255, -0.25, 0, 0.25, 0, -0.11288, -0.25, 0, 0.25, 0, -0.20162, -0.25, 0, 0.25, 0, 0.0686589, -0.25, 0, 0.25, 0, 0.194255, -0.25, 0, 0.25, 0, -0.11288, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.7, 1.1, 1.6, 1.9, 2.1, 2.4, 2.7, 3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4g8eu"]
_data = {
"RESET": SubResource("Animation_aaxd5"),
"attack": SubResource("Animation_e6ftk"),
"damaged": SubResource("Animation_kompd"),
"default": SubResource("Animation_ty2i4"),
"moving": SubResource("Animation_4cxhj"),
"search": SubResource("Animation_qd873")
}

[node name="mob" type="CharacterBody3D" groups=["mobs"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
collision_layer = 3
collision_mask = 3
input_ray_pickable = false
script = ExtResource("1_a0nd1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_yn2nw")

[node name="model" type="Node3D" parent="."]

[node name="Medium" type="MeshInstance3D" parent="model"]
transform = Transform3D(-1.41421, 0, 1.41421, 0, 2, 0, -1.41421, 0, -1.41421, 0, 0.25, 0)
mesh = ExtResource("2_kp607")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_ago2q")
surface_material_override/1 = SubResource("StandardMaterial3D_ia5mx")
surface_material_override/2 = SubResource("StandardMaterial3D_5ictk")

[node name="searchSpace" type="Area3D" parent="model"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -2)
collision_layer = 4
collision_mask = 4
input_ray_pickable = false
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="model/searchSpace"]
transform = Transform3D(1, 0, 0, 0, -0.0251999, 0.999682, 0, -0.999682, -0.0251999, 0, 0, 5)
visible = false
mesh = SubResource("CylinderMesh_4cync")

[node name="CollisionShape3D" type="CollisionShape3D" parent="model/searchSpace"]
transform = Transform3D(1, 0, 0, 0, -0.0251999, 0.999682, 0, -0.999682, -0.0251999, 0, 0, 5)
shape = SubResource("ConvexPolygonShape3D_67r8j")

[node name="attackSpace" type="Area3D" parent="model"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -2)
collision_layer = 4
collision_mask = 4
input_ray_pickable = false
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="model/attackSpace"]
mesh = SubResource("BoxMesh_rw3nj")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="model/attackSpace"]
shape = SubResource("ConvexPolygonShape3D_4m3lw")

[node name="dmgCounter" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51877, 0)
visible = false
billboard = 1
modulate = Color(128.498, 0, 0, 1)
text = "9001"
font_size = 79

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_4g8eu")
}
autoplay = "default"

[connection signal="body_entered" from="model/searchSpace" to="." method="_on_search_space_body_entered"]
[connection signal="body_exited" from="model/searchSpace" to="." method="_on_search_space_body_exited"]
[connection signal="body_entered" from="model/attackSpace" to="." method="_on_attack_space_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
